# bip39_dice

./: .gitignore  README.md  find_checksum.py  pyproject.toml
bip39_dice/: __init__.py  checksum_generator.py  dice_mapper.py
tests/: __init__.py  test_dice_permutations.py  test_phrase_bit_logic.py
tests/test_data/: vectors.json
