[tool.poetry]
name = "bip39_dice"
version = "0.1.0"
description = "Tools for generating secure BIP-39 compliant seeds using dice as an entropy source"
authors = ["Jim Pudar <jim@pudar.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
mnemonic = "^0.19"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
mypy = "^0.782"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
